# Stellar-Dex-Chat

./: .lintstagedrc.cjs  package.json  pr.md
Dechat/: README.md
Dechat/stellar-contracts/: .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  FIAT_BRIDGE_README.md  README.md  admin_auth_guide.md
Dechat/stellar-contracts/docs/: BATCH_OPERATIONS.md  OVERFLOW_PREVENTION.md  VERSION_MIGRATION.md
Dechat/stellar-contracts/scripts/: deploy_fiat_bridge_futurenet.sh
Dechat/stellar-contracts/src/: lib.rs  lib.rs.bak  math.rs  oracle.rs  test.rs  test_admin_auth_deposit.rs  test_deposit_invariants.rs  test_get_receipt_by_index.rs  test_issue_572.rs  test_issue_676.rs  test_issue_681.rs  test_issue_697.rs  test_issue_702.rs  test_issue_832.rs  test_issue_970.rs  test_issues_492_499.rs  test_issues_504_511_600.rs  test_issues_695_687.rs  test_issues_840.rs  test_new_issues.rs  test_pause_invariants.rs  test_request_withdrawal.rs  test_set_limit.rs  test_withdraw_fees_invariants.rs
Dechat/stellar-contracts/test_snapshots/events/: deny_add.json  deny_rem.json  fee_accrued.json  fees_withdrawn.json  heartbeat.json  quota_reset.json
Dechat/stellar-contracts/test_snapshots/test/: test_cancel_withdrawal.1.json  test_deposit_and_withdraw.1.json  test_double_init.1.json  test_execute_withdrawal_operator_limit_enforced.1.json  test_execute_withdrawal_operator_limit_resets_after_window.1.json  test_insufficient_funds_withdraw.1.json  test_over_limit_deposit.1.json  test_set_limit.1.json  test_time_locked_withdrawal.1.json  test_transfer_admin.1.json  test_view_functions.1.json  (+1 more)
(+1261 files in other folders)
